argo-rollouts/assets/03.canaray-advanced/03.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rollouts-demo-stable
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: rollouts-demo.local
    http:
      paths:
      - path: /canary-advanced(/|$)(.*)
        backend:
          serviceName: rollouts-demo-stable
          servicePort: 80
